--- a/fastly.toml
+++ b/fastly.toml
@@ -3,3 +3,4 @@ name = "Fanout starter for Rust"
 description = "Implements Fanout handlers for WebSockets, SSE, etc."
 authors = ["<oss@fastly.com>"]
 language = "rust"
+service_id = "3RABA1xg1KvtqTQpSxfFto"
